--- a/index.html
+++ b/index.html
@@ -6,82 +6,57 @@
 </head>
 
 <body>
- 
-<center>
-<hr>
-<h1 id="welcome"> Welcome</h1>
-<hr>
-
-    <div>
-        <p > 
-            <ul class="links"> 
-                <h2>Links for Other Pages</h2>
-                <li><a href="tags.html">Tags</a></li>
-                <li><a href="nested.html">Nested</a></li>
-                <li><a href="media.html">Media</a></li>
-            </ul>
-        </p>
-    </div>
-    
- <hr>
-
- <br>
- <br>
-
- <div class="best">
- <h2>Best Dog Breed for First-Time Owners</h2>
- <details>
-    <summary>Labrador Retriever</summary>
-    <img class="best-pic" src="sunset2.jfif" alt="sunsetr" width="1300" height="400">
-    <p>
-        <ul>
-            <li>The lab has been the most popular breed in the U.S. for 30 years</li>
-            <li>They are friendly and loyal</li>
-            <li>Easily trained and affectionate with the kids</li>
-        </ul>
-    </p>
-</details>
-
-<details>
-    <summary>Poodle</summary>
-    <img class="best-pic" src="sunset2.jfif" alt="sunsetr" width="1300" height="400">
-    <p>
-        <ul>
-            <li>Exceptionally smart breed that excels in all kinds of dog sport activities</li>
-            <li>One of the popular breeds</li>
-            <li>With their hypoallergenic coat can reduce allergic reactions, but requires grooming knowledge to keep maintained.</li>
-        </ul>
-    </p>
-</details>
-
-<details>
-    <summary>Shih Tzu</summary>
-    <img class="best-pic" src="sunset2.jfif" alt="sunsetr" width="1300" height="400">
-    <p>
-        <ul>
-            <li>  </li>
-        </ul>
-    </p>
-</details>
-
-
+<div class="header1">
+    <p>My Journey to Web Design<p>
 </div>
+<div>
+<span class="nav1"> <a href="index.html" class="button">Home</a></span>
+<span class="nav2"><a href="html.html" class="button">HTML</a></span>
+<span class="nav3"><a href="css.html" class="button">CSS</a></span>
+<span class="nav4"><a href="wordpress.html" class="button">WordPress</a></span>
+<span class="nav5"><a href="squarespace.html" class="button">SqaureSpace</a></span>
+</div>
+<p>
+<p>
+<p>
+
+
+<center>
+<img src="coding.jpeg" class="fit" width="2545" height="700">
 </center>
 
+<div class="left1">
+    <h2>About Me</h2>
+    <img src="me.jpg" width="300" height="365" class="fit2">
+        <p class="left1info">Hello! I'm Kyla Camille Ocampo. I'm a student in Boise State University, it is my second year, studying B.A. Media Arts and B.S. Computer Science. My interest in web design dates back as I can remember which is when I was 11 years old.
+        I have always been interested in designing my own things, whether it be my Facebook/Friendster page (2011), computer desktop wallpaper, and more. I find it really fun to make the design by my own. I didn't know that this is one of things I wanted to do as for my career until my second year in college. 
+</p>
+</div>
 
+<div class="right1">
+    <h2> Background </h2>
+    <img src="blockheads.png" width="200" height="200">
+        <p class="right1info">    
+            There is one specific game that prompt me to informally learn how to use HTML. <i>Blockheads</i>,  a 2.5D survival game. Players control an avatar dubbed a "Blockhead," which can explore their surroundings, navigate the sky in a search for floating islands, navigate the entire world map, 
+            harvest materials to create buildings, structures, or create farms and make crafting benches that enable the Blockhead to craft more advanced tools and materials in the game.
+            The game doesn't sound as if it requires any HTML at all, as it is a survival game, however there is a welcome page whenever a player joins a multiplayer world and it supports HTML editing! I absolutely love having this feature because it lets the players know what to expect or give a first impression when joining in. I could include any rules, information about the world, etc.
+            However, I had no coding experience at all, so I learned by going to <a href="https://www.w3schools.com/" class="button">W3schools.com.</a>
+        </p>
+    
+</div>
 
-
-
-
-
-
-
+<div class="bottom1">
+    <p id="contact">Contact<p>
+    <p>Kyla Camille Ocampo</p>
+    <p>kylacamilleocamp@u.boisestate.edu</p>
+    <p>(000)-000-0000</p>
+</div>
 </body>
  
 
-
 <footer>
     <p>©Kyla Camille Ocampo. All Rights Reserve</p>
-</footer>
+
+
 
 </html>
