--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <p class="right1info">    
             There is one specific game that prompt me to informally learn how to use HTML. <i>Blockheads</i>,  a 2.5D survival game. Players control an avatar dubbed a "Blockhead," which can explore their surroundings, navigate the sky in a search for floating islands, navigate the entire world map, 
             harvest materials to create buildings, structures, or create farms and make crafting benches that enable the Blockhead to craft more advanced tools and materials in the game.
-            The game doesn't sound as if it requires any HTML at all, as it is a survival game, however there is a welcome page whenever a player joins a multiplayer world and it supports HTML editing! I absolutely love having this feature because it lets the players know what to expect or give a first impression when joining in. I could include any rules, information about the world, etc.
+            The game doesn't sound as if it requires any HTML at all, as it is a survival game, however there is a welcome page whenever a player joins a multiplayer world and it supports HTML editing! I absolutely love having this feature because it lets the players know what to expect or give
+            a first impression when joining in. I could include any rules, information about the world, etc.
             However, I had no coding experience at all, so I learned by going to <a href="https://www.w3schools.com/" class="button">W3schools.com.</a>
         </p>
     
