--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
 <span class="nav4"><a href="wordpress.html" class="button">WordPress</a></span>
 <span class="nav5"><a href="squarespace.html" class="button">SqaureSpace</a></span>
 </div>
-<p>
-<p>
-<p>
-
 
 <center>
 <img src="coding.jpeg" class="fit" width="2545" height="700">
@@ -28,8 +24,11 @@
 <div class="left1">
     <h2>About Me</h2>
     <img src="me.jpg" width="300" height="365" class="fit2">
-        <p class="left1info">Hello! I'm Kyla Camille Ocampo. I'm a student in Boise State University, it is my second year, studying B.A. Media Arts and B.S. Computer Science. My interest in web design dates back as I can remember which is when I was 11 years old.
-        I have always been interested in designing my own things, whether it be my Facebook/Friendster page (2011), computer desktop wallpaper, and more. I find it really fun to make the design by my own. I didn't know that this is one of things I wanted to do as for my career until my second year in college. 
+        <p class="left1info">
+            Hello! I'm Kyla Camille Ocampo. I'm a student in Boise State University, it is my second year, studying B.A. Media Arts and B.S. Computer Science. 
+            My interest in web design dates back as I can remember which is when I was 11 years old.
+        I have always been interested in designing my own things, whether it be my Facebook/Friendster page (2011), computer desktop wallpaper, and more. 
+        I find it really fun to make the design by my own. I didn't know that this is one of things I wanted to do as for my career until my second year in college. 
 </p>
 </div>
 
@@ -37,9 +36,11 @@
     <h2> Background </h2>
     <img src="blockheads.png" width="200" height="200">
         <p class="right1info">    
-            There is one specific game that prompt me to informally learn how to use HTML. <i>Blockheads</i>,  a 2.5D survival game. Players control an avatar dubbed a "Blockhead," which can explore their surroundings, navigate the sky in a search for floating islands, navigate the entire world map, 
+            There is one specific game that prompt me to informally learn how to use HTML. <i>Blockheads</i>,  a 2.5D survival game. Players control an avatar dubbed a "Blockhead," 
+            which can explore their surroundings, navigate the sky in a search for floating islands, navigate the entire world map, 
             harvest materials to create buildings, structures, or create farms and make crafting benches that enable the Blockhead to craft more advanced tools and materials in the game.
-            The game doesn't sound as if it requires any HTML at all, as it is a survival game, however there is a welcome page whenever a player joins a multiplayer world and it supports HTML editing! I absolutely love having this feature because it lets the players know what to expect or give
+            The game doesn't sound as if it requires any HTML at all, as it is a survival game, however there is a welcome page whenever a player joins a multiplayer world and it supports HTML editing! 
+            I absolutely love having this feature because it lets the players know what to expect or give
             a first impression when joining in. I could include any rules, information about the world, etc.
             However, I had no coding experience at all, so I learned by going to <a href="https://www.w3schools.com/" class="button">W3schools.com.</a>
         </p>
@@ -52,12 +53,10 @@
     <p>kylacamilleocamp@u.boisestate.edu</p>
     <p>(000)-000-0000</p>
 </div>
+
 </body>
  
-
 <footer>
     <p>©Kyla Camille Ocampo. All Rights Reserve</p>
-
-
 
 </html>
